--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1><a href="https://speedruncentral.glitch.me">SpeedRunCentral</a></h1>
       
     <p>
-     No speedruns have been submitted to the site yet.
+ <a href="https://wfg-speedruncentral.glitch.me/">World's Fastest Game</a> - #1 by <a href="https://www.youtube.com/channel/UCUi3TUMjU0DtTOjxwb2hj8g">dlloyd10</a> - 100% in 0:04.000 <a href="https://www.youtube.com/watch?v=wWQbCy-hXO0">Watch video</a>, Description: This isn't the full world record, The person with the world record dosent have a video so this is wr with video.
     </p>
 
   </body>
